# localhost

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
config/: server.toml
docs/uml/: mux.mmd
public/api/: data.json
public/scripts/: hello.py  test.py
public/templates/: 404.html  405.html  auth.html  error.html  ftk.html  index.html  upload.html  upload_success.html
src/: lib.rs  loader.rs  main.rs
src/message/: mod.rs  request.rs  response.rs
src/mux/: add.rs  client.rs  core.rs  mod.rs  poll.rs  remove.rs  run.rs
src/server/: cgi.rs  delete.rs  external.rs  file_system.rs  getters.rs  http.rs  mod.rs  router.rs  session.rs  upload.rs  validation.rs
src/utils/: globals.rs  macros.rs  mod.rs
src/utils/errors/: app.rs  http.rs  mod.rs
src/utils/functions/: http.rs  mod.rs  time.rs
